test/scc/expr/semantic-errors/152.a
152.t:3:15: error: wide character array initialized from non-wide string